force-app/main/default/objects/copado__Burndown_Item__c/fields/copado__Expected_Story_Point__c.field-meta.xml
<CustomField>
    <fullName>copado__Expected_Story_Point__c</fullName>
    <label>Expected Story Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>