force-app/main/default/objects/copado__Burndown_Item__c/fields/copado__Planned_Velocity__c.field-meta.xml
<CustomField>
    <fullName>copado__Planned_Velocity__c</fullName>
    <description>Sprint Planned Velocity on a particular date on which Sprint Snapshot Batch is executed.</description>
    <label>Planned Velocity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>