force-app/main/default/objects/copado__Burndown_Item__c/fields/copado__Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>copado__Snapshot_Date__c</fullName>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>