force-app/main/default/objects/copado__Burndown_Item__c/fields/copado__Total_Story_Point__c.field-meta.xml
<CustomField>
    <fullName>copado__Total_Story_Point__c</fullName>
    <label>Total Story Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>