force-app/main/default/objects/copado__Burndown_Item__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Sprint__c</columns>
    <columns>copado__Date__c</columns>
    <columns>copado__Expected_Story_Point__c</columns>
    <columns>copado__Total_Story_Point__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>